# Flixor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKEND_MIGRATION_PLAN.md  CLAUDE.md  DEPLOYMENT_DOCKER.md  Dockerfile  FRONTEND_BACKEND_INTEGRATION.md  MIGRATION_BACKEND.md  PHASE_4_PLEX_INTEGRATION.md  PLAYER_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  constants.ts  docker-compose.yml  index.html  package-lock.json  package.json  plex.d.ts  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
api/: index.ts
app/: layout.tsx  page.tsx
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: server.ts
components/: appbar.tsx  auth-provider.tsx  hero.tsx
components/cards/: collection-view.tsx  video-view.tsx
components/screens/: library-screen.tsx  meta-screen.tsx  watch-screen.tsx
components/slider/: slider.tsx
docker/: frontend.Dockerfile  nginx.conf
lib/: utils.ts
packaging/flatpak/: io.example.PlexMpv.json
public/: test-integration.html
scripts/: build_media_linux.sh  build_media_macos.sh  build_media_windows.sh  collect_artifacts.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  net_api.rs  tauri_cmds.rs  trakt_api.rs
src-tauri/src/player/: ipc.rs  mod.rs
src/components/: AdvancedPlayer.tsx  Badge.tsx  Billboard.tsx  BrowseModal.tsx  Carousel.tsx  ContinueCard.tsx  DetailsHero.tsx  DetailsTabs.tsx  EpisodeItem.tsx  EpisodeSkeletonList.tsx  FilterBar.tsx  GlobalToast.tsx  (+31 more)
(+60 files in other folders)
