[package]
name = "plex-mpv-client"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs", "io-util", "sync", "net"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Optional libmpv FFI could be added here under a `libmpv` feature.

[features]
default = []
libmpv = []
